[project]
name = "fastapi-docs-exception"
version = "0.4.2"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Athroniaeth", email = "pierre.chaumont@hotmail.fr" }
]
requires-python = ">=3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
lint = "fastapi_docs_exception:lint"
test = "fastapi_docs_exception:test"
lint_ci = "fastapi_docs_exception:lint_ci"
test_ci = "fastapi_docs_exception:test_ci"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true

[dependency-groups]
dev = [
    "fastapi[standard]>=0.116.1",
    "pytest-cov>=5.0.0",
    "pytest>=8.3.5",
    "ruff>=0.12.4",
    "ty>=0.0.1a15",
    "commitizen>=3.31.0",
    "bandit>=1.7.10",
]

[tool.pytest.ini_options]
# Automatically create html and xml coverage reports
addopts = "--cov=src --cov-report=term-missing"
